--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -756,4 +756,6 @@
 
     <string name="success_changing_user_mail" context="Message when the user email has been changed successfully">Tu correo eléctrónico ha sido correctamente actualizado.</string>
 
+    <string name="title_new_warning_out_space" context="Iitle of the warning when the user is running out of space">Te estás quedando sin espacio libre.</string>
+    <string name="new_warning_out_space" context="Text of the warning when the user is running out of space">Saca el máximo provecho a tu cuenta con una cuenta PRO.</string>
 </resources>
