Task #4777: Add verification of the recovery key before changing pass with link

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -763,4 +763,6 @@
     <string name="take_photo_avatar_panel" context="Option of the sliding panel to change the avatar by taking a new picture">Hacer foto</string>
     <string name="choose_photo_avatar_panel" context="Option of the sliding panel to change the avatar by choosing an existing picture">Elegir foto</string>
     <string name="delete_avatar_panel" context="Option of the sliding panel to delete the existing avatar">Borrar foto</string>
+
+    <string name="incorrect_MK" context="Alert when the user introduces his MK to reset pass incorrectly">La clave maestra introducida no es correcta. Por favor, pruebe otra vez.</string>
 </resources>
