--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -766,5 +766,5 @@
 
     <string name="incorrect_MK" context="Alert when the user introduces his MK to reset pass incorrectly">La clave maestra introducida no es correcta. Por favor, pruebe otra vez.</string>
 
-    <string name="camera_uploads_empty" context="Text that indicates that no picture has been uploaded to the Camera Uploads section">Ninguna imagen subida</string>
+    <string name="camera_uploads_empty" context="Text that indicates that no pictures have been uploaded to the Camera Uploads section">Ninguna imagen subida</string>
 </resources>
