Task #4824 - Improving management of profile and account attributes to reduce api calls

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -772,4 +772,6 @@
 
     <string name="option_full_link" context="Alert Dialog to get link">Link with key</string>
 
+    <string name="recovering_info" context="Message shown meanwhile the app is waiting for a request">Recovering info&#8230;</string>
+
 </resources>
