--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -769,4 +769,6 @@
 
     <string name="option_full_link" context="Alert Dialog to get link">Link con clave de cifrado</string>
 
+    <string name="recovering_info" context="Message shown meanwhile the app is waiting for a request">Recovering info&#8230;</string>
+
 </resources>
