--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -775,4 +775,10 @@
 
     <string name="confirmation_delete_avatar" context="Confirmation before deleting the avatar of the user's profile">Your picture profile will be deleted. Do you want to proceed?</string>
     <string name="title_edit_profile_info" context="Title of the Dialog to edit the profile attributes of the user's account">Edit</string>
+
+    <string name="title_set_expiry_date" context="Alert Dialog to get link">Fecha de caducidad</string>
+    <string name="subtitle_set_expiry_date" context="Alert Dialog to get link">(SOLO PRO)</string>
+
+
+    <string name="old_password_provided_incorrect" context="Error alert dialog shown when changing the password the user provides an incorrect password ">La contraseña actual introducida es incorrecta.</string>
 </resources>
