--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -782,4 +782,20 @@
     <string name="edit_link_option" context="Option of the sliding panel to edit the link of a node">Editar link</string>
 
     <string name="old_password_provided_incorrect" context="Error alert dialog shown when changing the password the user provides an incorrect password ">La contraseña actual introducida es incorrecta.</string>
+
+    <string name="number_correctly_reinvite_contact_request" context="success message when reinviting multiple contacts">Se ha reinvitado a %d contactos correctamente. </string>
+
+    <string name="number_correctly_delete_contact_request" context="success message when reinviting multiple contacts">%d invitaciones eliminadas correctamente. </string>
+    <string name="number_no_delete_contact_request" context="error message when reinviting multiple contacts">%1$d invitaciones se han eliminado correctamente pero %2$d no se han podido eliminar.</string>
+
+    <string name="confirmation_delete_contact_request" context="confirmation message before removing a contact request.">Desea eliminar la invitación enviada a %s?</string>
+    <string name="confirmation_remove_multiple_contact_request" context="confirmation message before removing mutiple contact request">Desea eliminar estas %d invitaciones enviadas?</string>
+
+    <string name="number_correctly_invitation_reply_sent" context="success message when replying to multiple received request">Se ha contestado a %d invitaciones correctamente.</string>
+    <string name="number_incorrectly_invitation_reply_sent" context="error message when replying to multiple received request">Se contestado a %1$d invitaciones correctamente peroa  %2$d no se ha podido contestar.</string>
+
+    <plurals name="general_num_request">
+        <item quantity="one" context="referring to a invitation request in the Contacts section">invitación</item>
+        <item quantity="other" context="referring to a invitation request in the Contacts section">invitaciones</item>
+    </plurals>
 </resources>
