QA report #4944 - Remove shares dialog on outgoing shared items

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -798,4 +798,6 @@
         <item quantity="one" context="referring to a invitation request in the Contacts section">invitación</item>
         <item quantity="other" context="referring to a invitation request in the Contacts section">invitaciones</item>
     </plurals>
+
+    <string name="confirmation_remove_outgoing_shares" context="Confirmation before removing the outgoing shares of a folder">¿Dejar de compartir la carpeta?</string>
 </resources>
