Task #4967 - Replace the deprecated TabHost with the new component TabLayout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,7 +202,7 @@
 	<string name="section_shared_items" context="title of the screen that shows all the shared items">Shared items</string>
 	<string name="section_rubbish_bin" context="The title of the trash bin in the tree of the file manager.">Rubbish Bin</string>
 	<string name="section_contacts" context="Title of the contact list">Contacts</string>
-	<string name="tab_sent_requests" context="Title of the sent requests tab. Capital letters">SENT REQUESTS</string>
+	<string name="tab_sent_requests" context="Title of the sent requests tab. Capital letters">&#160;SENT REQUESTS&#160;</string>
 	<string name="tab_received_requests" context="Title of the received requests tab. Capital letters">RECEIVED REQUESTS</string>
 	<string name="sent_requests_empty" context="the user has not sent any contact request to other users">No sent requests</string>
 	<string name="received_requests_empty" context="the user has not received any contact request from other users">No received requests</string>
