--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,7 +220,7 @@
 	<string name="file_browser_empty_incoming_shares" context="message when there are no incoming shared folders">No incoming shared folders</string>
 	<string name="file_browser_empty_outgoing_shares" context="message when there are no outgoing shared folders">No outgoing shared folders</string>
     <string name="file_browser_empty_folder" context="Text that indicates that a folder is currently empty">Empty Folder</string>
-    <string name="empty_inbox" context="Text that indicates that Inbox is empty">Empty Folder</string>
+    <string name="empty_inbox" context="Text that indicates that Inbox is empty">Inbox Empty</string>
     
     <string name="choose_account_activity" context="Title of the activity Choose Account">Choose Account</string>
 	
