--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -810,4 +810,8 @@
     <string name="file_link_unavaible_ToS_violation" context="Error message shown when opening a file link which has been removed due to ToS/AUP violation">La fichero ha sido eliminado por una violación de los TdS/PUA.</string>
 
     <string name="action_unselect_one" context="Menu item to unselect all the elements of a list">Deseleccionar</string>
+
+    <string name="confirm_email_text" context="Title of the screen after creating the account. That screen asks the user to confirm the account by checking the email">Esperando la confirmación del email</string>
+    <string name="confirm_email_explanation" context="Text below the title that explains the user should check the email and click the link to confirm the account">Por favor, comprueba tu correo electrónico y haz click en el enlace enviado para confirmar tu cuenta.</string>
+
 </resources>
